syntax = "proto3";

package com.teddy.srv.notify;

option go_package = "proto";

import "github.com/golang/protobuf/ptypes/empty/empty.proto";
import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";

service Message {
    rpc SendEmail (SendEmailReq) returns (google.protobuf.Empty) {}
    rpc SendInBox (SendInBoxReq) returns (google.protobuf.Empty) {}
    rpc SendNotify (SendNotifyReq) returns (google.protobuf.Empty) {}
    rpc SendSMS (SendSMSReq) returns (google.protobuf.Empty) {}

    rpc GetInBox (GetInBoxReq) returns (stream InBoxItem) {}
    rpc GetNotify (GetNotifyReq) returns (stream NotifyItem) {}
}

message InBoxItem {
    string id = 1;
    string topic = 2;
    string content = 3;
    string from = 4;
    uint32 Type = 5;
    bool unread = 6;
    google.protobuf.Timestamp sendTime = 7;
    google.protobuf.Timestamp ReadTime = 8;
}

message NotifyItem {
    string topic = 1;
    string detail = 2;
}

message SendEmailReq {
	string email = 1;
    string topic = 2;
    string cotent = 3;
    google.protobuf.Timestamp until = 4;
}

message SendInBoxReq {
    string uid = 1;
    string topic = 2;
    string content = 3;
    string from = 4;
    uint32 type = 5;
    google.protobuf.Timestamp sendTime = 6;
}

message SendNotifyReq {
    string uid = 1;
    string topic = 2;
    string detail = 3;
}

message SendSMSReq {
    string phoneNumber = 1;
    string content = 2;
}

message GetInBoxReq {
    uint32 page = 1;
    uint32 size = 2;
    uint32 type = 3;
    string uid = 4;
}

message GetNotifyReq {
    string uid = 1;
}